--- a/services.html
+++ b/services.html
@@ -40,27 +40,7 @@
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
 			          <li><a href="index.html">Home</a></li>
-			          <li><a href="about.html">About</a></li>
-			          <li><a href="services.html">Services</a></li>
-			          <li><a href="portfolio.html">Portfolio</a></li>
-			          <li><a href="price.html">Pricing</a></li>
-			          <li class="menu-has-children"><a href="">Blog</a>
-			            <ul>
-			              <li><a href="blog-home.html">Blog Home</a></li>
-			              <li><a href="blog-single.html">Blog Single</a></li>
-			            </ul>
-			          </li>	
-			          <li class="menu-has-children"><a href="">Pages</a>
-			            <ul>
-		            	  <li><a href="elements.html">Elements</a></li>
-				          <li class="menu-has-children"><a href="">Level 2 </a>
-				            <ul>
-				              <li><a href="#">Item One</a></li>
-				              <li><a href="#">Item Two</a></li>
-				            </ul>
-				          </li>					                		
-			            </ul>
-			          </li>					          					          		          
+			          <li><a href="services.html">Technolgy Dossier</a></li>
 			          <li><a href="contact.html">Contact</a></li>
 			        </ul>
 			      </nav><!-- #nav-menu-container -->		    		
@@ -68,66 +48,64 @@
 		    </div>
 		  </header><!-- #header -->
 		  	  
-			<!-- start banner Area -->
-			<section class="about-banner">
-				<div class="container">				
-					<div class="row d-flex align-items-center justify-content-center">
-						<div class="about-content col-lg-12">
-							<h1 class="text-white">
-								Services				
-							</h1>	
-							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="services.html"> Services</a></p>
-						</div>	
-					</div>
-				</div>
-			</section>
-			<!-- End banner Area -->	
-
 			<!-- Start services Area -->
 			<section class="services-area section-gap">
 				<div class="container">
 		            <div class="row d-flex justify-content-center">
 		                <div class="menu-content  col-lg-7">
 		                    <div class="title text-center">
-		                        <h1 class="mb-10">My Offered Services</h1>
-		                        <p>At about this time of year, some months after New Year’s resolutions have been made and kept, or made and neglected.</p>
+		                        <h1 class="mb-10">Technology Dossier</h1>		                        
+		                        <p>Fun/Learning Projects By Me</p>		                        
 		                    </div>
 		                </div>
 		            </div>						
 					<div class="row">
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
-								<span class="lnr lnr-pie-chart"></span>
-								<a href="#"><h4>Web Design</h4></a>
+								<span class="lnr">
+									<i class="fa fa-file">
+									</i>
+								</span>
+								<a href="#">
+									<h4>Document Extract</h4>
+								</a>
 								<p>
-									“It is not because things are difficult that we do not dare; it is because we do not dare that they are difficult.”
+									An implementation of Luhns Algorithm for Document Extract/Summary
 								</p>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
-								<span class="lnr lnr-laptop-phone"></span>
-								<a href="#"><h4>Web Development</h4></a>
+								<span class="lnr">
+									<i class="fa fa-server" aria-hidden="true"></i>
+								</span>
+								<a href="#">
+									<h4>Tomcat Deployer</h4>
+								</a>
+
 								<p>
-									If you are an entrepreneur, you know that your success cannot depend on the opinions of others. Like the wind, opinions.
+									A sample shell script to deploy a war in tomcat and start
 								</p>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
-								<span class="lnr lnr-camera"></span>
-								<a href="#"><h4>Photography</h4></a>
+								<span class="lnr"><i class="fa fa-refresh"></i></span>
+								<a href="#"><h4>Walle</h4></a>
 								<p>
-									Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills.
+									Change wallpaper in ubuntu command line. It has a timer set, which automatically refreshes the wallpaper periodically from a given path.
 								</p>
+								<
 							</div>	
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
-								<span class="lnr lnr-picture"></span>
-								<a href="#"><h4>Clipping Path</h4></a>
+								<span class="lnr">
+									<i class="fa fa-file-excel-o" aria-hidden="true"></i>
+								</span>
+								<a href="#"><h4>XML Convertor</h4></a>
 								<p>
-									Hypnosis quit smoking methods maintain caused quite a stir in the medical world over the last two decades. There is a lot of argument.
+									Convert object to an XML.
 								</p>
 							</div>
 						</div>
