--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
 			          <li><a href="index.html">Home</a></li>
-			          <li><a href="services.html">Technolgy Dossier</a></li>
+			          <li><a href="services.html">Technology Dossier</a></li>
 			          <li><a href="contact.html">Contact</a></li>
 			        </ul>
 			      </nav><!-- #nav-menu-container -->		    		
