--- a/services.html
+++ b/services.html
@@ -56,6 +56,7 @@
 		                    <div class="title text-center">
 		                        <h1 class="mb-10">Technology Dossier</h1>		                        
 		                        <p>Fun/Learning Projects By Me</p>		                        
+		                        <p><a href="htttp://www.github.com/sandeshm22">htttp://www.github.com/sandeshm22</a></p>		                        
 		                    </div>
 		                </div>
 		            </div>						
