--- a/index.html
+++ b/index.html
@@ -41,21 +41,22 @@
 			        <ul class="nav-menu">
 			          <li><a href="index.html">Home</a></li>
 			          <li><a href="services.html">Technology Dossier</a></li>			         					          					          		          
+			          <li><a href="journey.html">My Journey</a></li>
 			          <li><a href="contact.html">Contact</a></li>
 			        </ul>
 			      </nav><!-- #nav-menu-container -->		    		
 		    	</div>
 		    </div>
 		  </header><!-- #header -->
-			  
+		<div id ="bg-img-area">	  
 			<!-- Start home-about Area -->
 			<section class="home-about-area section-gap">
 				<div class="container">
 					<div class="row align-items-center justify-content-between">
-						<div class="col-lg-6 col-md-6 home-about-left">
+						<div class="col-lg-4 col-md-4 home-about-left">
 							<img class="img-fluid" src="img/about-img.png" alt="">
 						</div>
-						<div class="col-lg-5 col-md-6 home-about-right">
+						<div class="col-lg-8 col-md-8 home-about-right">
 							<p>
 								<p>Sandesh Mutha,<br/> 
 Software Engineer .</p> 
@@ -72,74 +73,6 @@ Software Engineering was the buzz around in the society when I passed my standar
 			</section>
 			<!-- End home-about Area -->	
 
-			<!-- Start timeline Area -->
-			<section class="timeline pb-120">
-            <div class="text-center">
-                <div class="menu-content pb-70">
-                    <div class="title text-center">
-                        <h1 class="mb-10">My Qualifications</h1>
-                        <p>Who are in extremely love with eco friendly system.</p>
-                    </div>
-                </div>
-            </div>				
-			  <ul>
-			    <li>
-			      <div class="content">
-			        <h4>
-			          <time>
-							<p>Authorized Officer UBS</p>							
-					  </time>
-			        </h4>
-			        <p>May' 17 - Present</p>			        
-			      </div>
-			    </li>
-			    <li>
-			      <div class="content">
-			        <h4>
-			          <time>Senior Software Engineer</time>
-			        </h4>
-			        <p>Synechron Technologies</p>
-					<p>Nov' 16 - May' 17</p>
-			      </div>
-			    </li>
-				<li>
-			      <div class="content">
-			        <h4>
-			          <time>Senior Software Engineer</time>
-			        </h4>
-			        <p>Cybage Software</p>
-					<p>Jan' 15 - Nov' 16</p>
-			      </div>
-			    </li>
-				<li>
-			      <div class="content">
-			        <h4>
-			          <time>Software Engineer</time>
-			        </h4>
-			        <p>Curologic Systems Pvt Ltd</p>
-					<p>Nov' 13 - Jan' 15</p>
-			      </div>
-			    </li>
-			    <li>
-			      <div class="content">
-			        <h4>
-			          <time>Software Associate</time>
-			        </h4>
-			        <p>Saba Software</p>			        
-			      </div>
-			    </li>
-			    <li>
-			      <div class="content">
-			        <h4>
-			          <time>BTech in IT</time>
-			        </h4>
-			        <p>Pune Institute Of Computer Technology</p>
-			        <p>Passing : 2012</p>
-			      </div>
-			    </li>
-			  </ul>
-			</section>		
-
 			<!-- End timeline Area -->
 
             <!-- start footer Area -->
@@ -153,7 +86,7 @@ Software Engineering was the buzz around in the society when I passed my standar
                                     Sandesh Mutha
                                 </p>
 								<p>
-                                    Software Engineer
+                                    Technology Enthusiast
                                 </p>
                                 <p class="footer-text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
@@ -215,6 +148,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="js/mail-script.js"></script>	
 			<script src="js/main.js"></script>
 
-
+</div>
 		</body>
 	</html>
