--- a/services.html
+++ b/services.html
@@ -41,6 +41,7 @@
 			        <ul class="nav-menu">
 			          <li><a href="index.html">Home</a></li>
 			          <li><a href="services.html">Technology Dossier</a></li>
+					  <li><a href="journey.html">My Journey</a></li>
 			          <li><a href="contact.html">Contact</a></li>
 			        </ul>
 			      </nav><!-- #nav-menu-container -->		    		
@@ -96,7 +97,7 @@
 								<p>
 									Change wallpaper in ubuntu command line. It has a timer set, which automatically refreshes the wallpaper periodically from a given path.
 								</p>
-								<
+								
 							</div>	
 						</div>
 						<div class="col-lg-4 col-md-6">
@@ -177,24 +178,5 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                 </div>
             </footer>
             <!-- End footer Area -->		
-
-			<script src="js/vendor/jquery-2.2.4.min.js"></script>
-			<script src="js/popper.min.js"></script>
-			<script src="js/vendor/bootstrap.min.js"></script>			
-			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>			
-  			<script src="js/easing.min.js"></script>			
-			<script src="js/hoverIntent.js"></script>
-			<script src="js/superfish.min.js"></script>	
-			<script src="js/jquery.ajaxchimp.min.js"></script>
-			<script src="js/jquery.magnific-popup.min.js"></script>	
-    		<script src="js/jquery.tabs.min.js"></script>						
-			<script src="js/jquery.nice-select.min.js"></script>	
-            <script src="js/isotope.pkgd.min.js"></script>			
-			<script src="js/waypoints.min.js"></script>
-			<script src="js/jquery.counterup.min.js"></script>
-			<script src="js/simple-skillbar.js"></script>							
-			<script src="js/owl.carousel.min.js"></script>							
-			<script src="js/mail-script.js"></script>	
-			<script src="js/main.js"></script>	
 		</body>
 	</html>
