--- a/portfolio.html
+++ b/portfolio.html
@@ -41,6 +41,7 @@
 			        <ul class="nav-menu">
 			          <li><a href="index.html">Home</a></li>
 			          <li><a href="services.html">Portfolio</a></li>
+					  <li><a href="journey.html">My Journey</a></li>
 			          <li><a href="contact.html">Contact</a></li>
 			        </ul>
 			      </nav><!-- #nav-menu-container -->		    		
