--- a/json-parser.html
+++ b/json-parser.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Bootstrap Example</title>
-		<meta charset="utf-8">
-			<meta name="viewport" content="width=device-width, initial-scale=1">
-				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-					<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-					<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-					<style>
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+<style>
 textarea {
      width: 100%;
      -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
      -moz-box-sizing: border-box;    /* Firefox, other Gecko */
      box-sizing: border-box;         /* Opera/IE 8+ */
-	 height : 100%;
 }
+
 .key {
 	color:red;
 }
+
 </style>
-					<script>
+<script>
  function jsonformat(){
 	var jsonString = $("#input").val();
 var jsonPretty = JSON.stringify(JSON.parse(jsonString),null,2);  
@@ -32,8 +33,7 @@ $("#output").html(result);
     if (typeof json != 'string') {
          json = JSON.stringify(json, undefined, 2);
     }
-    json = json.replace(/&/g, '&amp;').replace(/
-					</g, '&lt;').replace(/>/g, '&gt;');
+    json = json.replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;');
     return json.replace(/("(\\u[a-zA-Z0-9]{4}|\\[^u]|[^\\"])*"(\s*:)?|\b(true|false|null)\b|-?\d+(?:\.\d*)?(?:[eE][+\-]?\d+)?)/g, function (match) {
         var cls = 'number';
         if (/^"/.test(match)) {
@@ -47,25 +47,28 @@ $("#output").html(result);
         } else if (/null/.test(match)) {
             cls = 'null';
         }
-        return '
-					<span class="' + cls + '">' + match + '</span>';
+        return '<span class="' + cls + '">' + match + '</span>';
     });
 }
+</script>
+  </head>
 
-				</script>
-			</head>
-			<body>
-				<div class="container-fluid">
-					<div class="row">
-						<div class="col-lg-12">
-							<div class="col-md-4">
-								<textarea onchange ='jsonformat()' id = 'input'></textarea>
-							</div>
-							<div class="col-md-8">
-								<pre id = 'output'></pre>
-							</div>
-						</div>
-					</div>
-				</div>
-			</body>
-		</html>
+<body>
+
+<div class="container-fluid">
+  <div class="row">
+	<div class="col-lg-12">
+    <div class="col-md-4">
+		<textarea onchange ='jsonformat()' id = 'input'>
+		</textarea>
+	</div>
+    <div class="col-md-8">
+		<pre id = 'output'>
+		</pre>
+	</div>
+  </div>
+  </div>
+</div>
+    
+</body>
+</html>
