--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 	<!DOCTYPE html>
 	<html lang="zxx" class="no-js">
+<meta name="title" content="Bitsbiz Your way to digitize business">
+<meta name="description" content="Website making,  software development">
+<meta name="keywords" content="Website making">
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
+<meta name="revisit-after" content="1 days">
+<meta name="author" content="Sandesh Mutha">
 	<head>
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
